--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
   <header>
     <h1>Raissa Albuquerque Diniz</h1>
     <figure>
-      <img src="figs/perfil.jpg" alt="Foto de perfil de Raissa" width="200">
-      <figcaption>Foto de perfil</figcaption>
+      <img src="midia/WhatsApp Image 2025-03-28 at 20.58.14.jpeg" alt="Foto de perfil de Raissa" width="200">
+      
     </figure>
   </header>
 
   <nav>
-    <a href="#resumo">Resumo</a> |
+    <a href="#resumo">GitHub</a> |
     <a href="#contato">Contato</a> |
-    <a href="#ods">ODS</a> |
-    <a href="mailto:raissa@email.com">E-mail</a>
+    <a href="mailto:raissa.albuquerque02@gmail">E-mail</a>
   </nav>
 
   <main>
@@ -60,27 +59,11 @@
     <section>
       <h2>Detalhes</h2>
       <dl>
-        <dt>Curso</dt>
-        <dd>Análise e Desenvolvimento de Sistemas</dd>
-        <dt>Universidade</dt>
+        <h3>Curso</h3>
+        <p>Análise e Desenvolvimento de Sistemas</p>
+        <h3>Universidade</h3>
         <dd>UTFPR</dd>
       </dl>
     </section>
-
-    <section id="ods">
-      <h2>ODS que pretendo contribuir</h2>
-      <figure>
-        <img src="figs/ods4.png" alt="ODS 4 - Educação de Qualidade" width="400">
-        <figcaption>ODS 4 - Educação de Qualidade</figcaption>
-      </figure>
-      <p>Acredito que a educação transforma vidas. Por isso, pretendo contribuir com ações de inclusão digital e educação tecnológica para todos.</p>
-    </section>
-
-  </main>
-
-  <footer>
-    <p>&copy; 2025 - Raissa Albuquerque Diniz</p>
-  </footer>
-
 </body>
 </html>
