--- a/index.html
+++ b/index.html
@@ -5,21 +5,106 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Raissa Albuquerque Diniz - Curriculum Vitae</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f5f5f5;
+      color: #333;
+    }
+
+    header {
+      background-color: #51dfb0;
+      color: white;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+
+    header img {
+      border-radius: 50%;
+      margin-top: 1rem;
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      border: 3px solid white;
+    }
+
+    nav {
+      text-align: center;
+      background-color: #e3e3e3;
+      padding: 1rem;
+    }
+
+    nav a {
+      text-decoration: none;
+      background-color: #138386;
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
+      margin: 0 0.5rem;
+      transition: background-color 0.3s;
+    }
+
+    nav a:hover {
+      background-color: #357ab7;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    section {
+      margin-bottom: 2rem;
+    }
+
+    h2 {
+      color: #0c88a3;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 0.3rem;
+    }
+
+    ul, ol, dl {
+      margin-left: 2rem;
+    }
+
+    li {
+      margin-bottom: 0.5rem;
+    }
+
+    .material-icons-outlined {
+      vertical-align: middle;
+      margin-right: 0.3rem;
+      color: #4ae2dd;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: #166e73;
+      color: white;
+    }
+  </style>
 </head>
 <body>
 
   <header>
     <h1>Raissa Albuquerque Diniz</h1>
     <figure>
-      <img src="midia/WhatsApp Image 2025-03-28 at 20.58.14.jpeg" alt="Foto de perfil de Raissa" width="200">
-      
+      <img src="midia/WhatsApp Image 2025-03-28 at 20.58.14.jpeg" alt="Foto de perfil de Raissa">
     </figure>
   </header>
 
   <nav>
-    <a href="#resumo">GitHub</a> |
-    <a href="#contato">Contato</a> |
-    <a href="mailto:raissa.albuquerque02@gmail">E-mail</a>
+    <a href="https://github.com/Raissaalbuquerque02" target="_blank">GitHub</a>
+    <a href="#contato">Contato</a>
+    <a href="mailto:raissa.albuquerquee02@gmail.com">E-mail</a>
   </nav>
 
   <main>
@@ -32,7 +117,7 @@
     <section id="contato">
       <h2>Informações Pessoais</h2>
       <ul>
-        <li><i class="material-icons-outlined">email</i> <a href="mailto:raissa@email.com">raissa@email.com</a></li>
+        <li><i class="material-icons-outlined">email</i> <a href="mailto:raissa@email.com">raissa.albuquerquee02@gmail.com</a></li>
         <li><i class="material-icons-outlined">location_on</i> Nova Fátima - PR</li>
         <li><i class="material-icons-outlined">business</i> Catuai Rótulos</li>
       </ul>
@@ -59,11 +144,19 @@
     <section>
       <h2>Detalhes</h2>
       <dl>
-        <h3>Curso</h3>
-        <p>Análise e Desenvolvimento de Sistemas</p>
-        <h3>Universidade</h3>
+        <dt><strong>Curso:</strong></dt>
+        <dd>Análise e Desenvolvimento de Sistemas</dd>
+        <dt><strong>Universidade:</strong></dt>
         <dd>UTFPR</dd>
       </dl>
     </section>
+
+  </main>
+
+  <footer>
+    &copy; 2025 Raissa Albuquerque Diniz
+  </footer>
+
 </body>
 </html>
+
